test/libsolidity/syntaxTests/storageLayoutSpecifier/layout_specified_by_type.sol
contract A layout at uint {}
// ----
// TypeError 6396: (21-25): The base slot of the storage layout must evaluate to a rational number.
